--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -38,14 +38,17 @@
                             materialDesign:HintAssist.Foreground="Green"
                             materialDesign:TextFieldAssist.UnderlineBrush="Green"
                             materialDesign:TextFieldAssist.HasClearButton="True"
+                            PasswordChanged="Pb_InPasswd_PasswordChanged"
                             Style="{StaticResource MaterialDesignFilledRevealPasswordBox}" Margin="50,10,15,10"  />
                         <Button x:Name="Bt_Encrypt" Content="Encrypt"  HorizontalAlignment="Left" Margin="15,0,0,0" VerticalAlignment="Center" Cursor="Hand" Grid.Column="1" Click="Bt_Encrypt_Click"/>
                         <Button x:Name="Bt_Decode" Content="Decode" HorizontalAlignment="Left" Margin="121,0,0,0" VerticalAlignment="Center" Cursor="Hand" Grid.Column="1" Click="Bt_Decode_Click"/>
                         <TextBox
+                            x:Name="Tb_OutPasswd"
                             Style="{StaticResource MaterialDesignOutlinedTextBox}"
                             TextWrapping="Wrap"
-                            materialDesign:TextFieldAssist.CharacterCounterVisibility="Visible"
+                            IsReadOnly="True"
                             VerticalScrollBarVisibility="Auto"
+                            materialDesign:TextFieldAssist.CharacterCounterVisibility="Visible"
                             materialDesign:HintAssist.Hint="Output Content ..." Height="210"  Grid.Row="1" Margin="50,16,15,5" />
                         <materialDesign:PackIcon Kind="Export" Margin="25,20,0,0" Height="23" Width="20" Grid.Row="1" />
                         <Button x:Name="Bt_Copy" Content="Copy" HorizontalAlignment="Left" Margin="15,187,0,0" VerticalAlignment="Top" Cursor="Hand" Width="79" Grid.Row="1" Grid.Column="1" Click="Bt_Copy_Click"/>
