Add published config
Single package

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -63,5 +63,6 @@
             </TabItem>
         </TabControl>
         <materialDesign:Snackbar Name="iSnackbar" MessageQueue="{materialDesign:MessageQueue}"/>
+        <StackPanel/>
     </Grid>
 </Window>
